objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>mcdm_15__DM_Auto_Send__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DM Auto Send</label>
        <referenceTo>mcdm_15__DM_Auto_Send__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mcdm_15__DM_Error__c</fullName>
        <label>Error</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mcdm_15__JourneyApprovalState__c</fullName>
        <description>Campaign member&apos;s approval state for a single journey / campaign pair. The status controls if a member is available for approval, or reflects an on-journey, rejected, or error state.</description>
        <label>Journey Approval State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>